[package]
name = "testcrate"
version = "0.1.0"
authors = ["Mark Padgham <mark.padgham@email.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
